--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -3,10 +3,10 @@ SHELL=/bin/bash
 # SRCS=gf.cpp
 OBJS = robotgshs_par.o
 CFLAG = -O3 -Wundefined-var-template
-ifeq ($(TARGET), OSX)
-	CC = g++ -std=c++2a
-else
+ifeq ($(TARGET), LINUX)
 	CC = clang++ -std=c++2a
+else
+	CC = g++ -std=c++2a
 endif
 INCLUDES = -I/usr/local/Cellar/ginac/1.8.0/include -I/usr/local/Cellar/cln/1.3.6/include
 LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib/ -L/usr/local/Cellar/cln/1.3.6/lib
