--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -17,7 +17,7 @@ INCLUDES += -I/Users/amal029_old/eha/cpp/include
 LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib -L/usr/local/Cellar/cln/1.3.6/lib
 LIBDIR += -L/usr/local/Cellar/python@3.8/3.8.5/Frameworks/Python.framework/Versions/3.8/lib
 LIBDIR += -L./lib
-LIBDIR += -L/usr/lib
+LIBDIR += -L/usr/local/opt/llvm/lib -L/usr/lib
 LIBS = -lcln -lginac -lpython3.8 -lsolver
 
 all:	lib robotgshs_par driver gene twocars
