--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -5,19 +5,25 @@ OBJ2 = driver.o
 OBJ3 = gene.o
 OBJ4 = twocars.o
 OBJS = ${OBJ1} ${OBJ2} ${OBJ3} ${OBJ4}
-CFLAGS = -O3 -mavx2 -mavx -ffast-math -std=c++2a
+CFLAGS = -O3 -mavx2 -mavx -ffast-math
+SYSROOT = `xcrun --show-sdk-path`
 ifeq ($(TIME), 1)
 	CFLAGS += -DTIME
 endif
-SYSROOT = `xcrun --show-sdk-path`
-CC = clang++ -isysroot ${SYSROOT}
-INCLUDES = -I/usr/local/Cellar/ginac/1.8.0/include -I/usr/local/Cellar/cln/1.3.6/include
+ifeq ($(CLANG), 1)
+	CC = clang++ -isysroot ${SYSROOT} -std=c++20
+	LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib -L/usr/local/Cellar/cln/1.3.6/lib
+else
+	CC = g++-10 -std=c++20
+	LIBDIR += -L/opt/ginac/lib -L/opt/cln/lib
+endif
+# INCLUDES = -I/usr/local/Cellar/ginac/1.8.0/include -I/usr/local/Cellar/cln/1.3.6/include
+INCLUDES += -I/opt/cln/include -I/opt/ginac/include
 INCLUDES += -I/usr/local/Frameworks/Python.framework/Versions/Current/include/python3.8
 
 INCLUDES += -I/Users/amal029_old/Library/Python/3.8/lib/python/site-packages/numpy/core/include
 INCLUDES += -I/Users/amal029_old/eha/cpp/include
 
-LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib -L/usr/local/Cellar/cln/1.3.6/lib
 LIBDIR += -L/usr/local/Frameworks/Python.framework/Versions/Current/lib
 LIBDIR += -L./lib
 LIBDIR += -L/usr/local/opt/llvm/lib -L/usr/lib
