Fixed a small error.
Signed-off-by: Avinash Malik <avinash.malik@auckland.ac.nz>

--- a/cpp/src/Makefile
+++ b/cpp/src/Makefile
@@ -6,13 +6,13 @@ INCLUDES += -I/opt/cln/include -I/opt/ginac/include
 OBJS = solver.o
 SYSROOT = `xcrun --show-sdk-path`
 # CC = clang++ -isysroot ${SYSROOT}
-CC = g++-10
-CFLAGS = -O3 -mavx2 -mavx -ffast-math -std=c++20
+# CC = g++-10
+CFLAGS = -O3 -mavx2 -mavx -ffast-math
 ifeq ($(DEBUG), 1)
 	CFLAGS += -DDEBUG -DZEBUG
 endif
 ifeq ($(CLANG), 1)
-	CC = clang++ -isysroot ${SYSROOT} -std=c++20
+	CC = clang++ -isysroot ${SYSROOT} -std=c++2a
 	LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib -L/usr/local/Cellar/cln/1.3.6/lib
 else
 	CC = g++-10 -std=c++20
