--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -10,14 +10,13 @@ SYSROOT = `xcrun --show-sdk-path`
 ifeq ($(TIME), 1)
 	CFLAGS += -DTIME
 endif
-ifeq ($(CLANG), 1)
-	CC = clang++ -isysroot ${SYSROOT} -std=c++2a
-	LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib -L/usr/local/Cellar/cln/1.3.6/lib
-else
+ifeq ($(GCC), 1)
 	CC = g++-10 -std=c++20
 	LIBDIR += -L/opt/ginac/lib -L/opt/cln/lib
+else
+	CC = clang++ -isysroot ${SYSROOT} -std=c++2a
+	LIBDIR = -L/usr/local/Cellar/ginac/1.8.0/lib -L/usr/local/Cellar/cln/1.3.6/lib
 endif
-# INCLUDES = -I/usr/local/Cellar/ginac/1.8.0/include -I/usr/local/Cellar/cln/1.3.6/include
 INCLUDES += -I/opt/cln/include -I/opt/ginac/include
 INCLUDES += -I/usr/local/Frameworks/Python.framework/Versions/Current/include/python3.8
 
